# OpsPilot-AI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py  investigation_agent.py  prompt_builder.py
backend/app/api/: __init__.py  health.py  history.py  investigate.py  remediation.py  reports.py  stream.py  telemetry.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/database/: __init__.py
backend/app/db/: database.py
backend/app/models/: __init__.py
backend/app/remediation/: __init__.py  engine.py  models.py  rules.py
backend/app/reports/: __init__.py  exporters.py  generator.py  models.py  templates.py
backend/app/schemas/: health.py  investigation.py
backend/app/services/: __init__.py  agentic_loop.py  openai_service.py  report_service.py
backend/app/tools/: __init__.py  base.py  k8s_tools.py  kubernetes.py  registry.py
backend/app/tools/kubernetes/: __init__.py  mock_data.py  pod_tool.py
backend/app/workflows/: __init__.py  investigation_workflow.py
docs/: 01_PROJECT_OVERVIEW.md  02_PRD.md  03_ARCHITECTURE.md  architecture.md  demo.md  deployment.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
scripts/: dev-env.ps1  dev-shell.cmd  reset.sh  trigger-fault.sh
terraform/: README.md  helm_release.tf  main.tf  (+7 more)
(+50 files in other folders)
