[project]
name = "opspilot-ai-backend"
version = "0.1.0"
description = "FastAPI backend foundation for OpsPilot AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
