[project]
name = "opspilot-ai-backend"
version = "0.1.0"
description = "FastAPI backend foundation for OpsPilot AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.6.17",
    "fastapi>=0.115.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.6.0",
    "python-certifi-win32>=1.6.1",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
